# stronghold.rs

engine/examples/native_messaging/: Cargo.toml  README.md
engine/examples/native_messaging/app/: main.css  main.html  main.js  manifest.json
engine/examples/native_messaging/host/: com.iota.stronghold.json  register.sh
engine/examples/native_messaging/src/: client.rs  main.rs
engine/vault/src/types/: transactions.rs  utils.rs
