[package]
name = "native_messaging"
version = "0.1.0"
authors = ["tensor-programming <tensordeveloper@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["yaml"] }

stronghold-engine = {path = "../../"}

bincode = "1.3.1"
serde = {version = "1.0.114", features = ["derive"]}

chrome_native_messaging = "0.1.2"
serde_json = "1"

[[bin]]
name = "stronghold"
path = "src/main.rs"

[workspace]
